--- a/catalogue/eurostat/geoprocessed-eurostat-mortality/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-mortality/__item__.yaml
@@ -16,9 +16,9 @@ properties:
   dc:access_rights: charges apply
   dc:title: Eurostat mortality data over Europe
   dc:subject:
-  - EUROSTAT
+  - eurostat
   - mortality
-  - EUROPE
+  - europe
   - geoprocessed
   - geospatial
   dc:description:
