--- a/catalogue/eurostat/__collection__.yaml
+++ b/catalogue/eurostat/__collection__.yaml
@@ -21,11 +21,15 @@ description:
  Among the variuos statistics available on Eurostat, 
  we propose specific datasets with climate-related variables geoprocessed for easy correlation with other datasets.
 
-# links:
-# - title: Eurostat data documentation
-#   rel: documentation
-#   href:
-#   type: text/html
+links:
+- title: Eurostat documentation
+  rel: documentation
+  href: https://ec.europa.eu/eurostat/en/web/main/publications/manuals-and-guidelines
+  type: text/html
+- title: Licence to use Eurostat products
+  rel: license
+  href: https://ec.europa.eu/eurostat/about-us/policies/copyright#:~:text=What%20to%20do%20if%20you,listed%20in%20the%20exceptions%20above).
+  type: text/html
 extent:
   spatial:
     bbox:
@@ -37,7 +41,7 @@ extent:
     interval:
     - -
       -
-license: MISSING
+license: various
 keywords:
 - eurostat
 - statistics
