--- a/catalogue/eurostat/geoprocessed-eurostat-mortality/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-mortality/__item__.yaml
@@ -1,7 +1,11 @@
 links:
-- title: EUROSTAT data documentation
-  rel: documentation
+- title: Original data source
+  rel: derived_from
   href: https://ec.europa.eu/eurostat/cache/metadata/en/demomwk_esms.htm
+  type: text/html
+- title: Destination Earth
+  rel: funded_by
+  href: https://destination-earth.eu/
   type: text/html
 bbox:
 - -27
@@ -44,7 +48,6 @@ properties:
     countries. A long enough time series is necessary for temporal
     comparisons and statistical modelling.
 
-license: https://ec.europa.eu/info/legal-notice_en
 providers:
 - name: EUROSTAT
   roles:
