--- a/catalogue/eurostat/__collection__.yaml
+++ b/catalogue/eurostat/__collection__.yaml
@@ -23,7 +23,7 @@ description:
 
 links:
 - title: Eurostat documentation
-  rel: documentation
+  rel: derived_from
   href: https://ec.europa.eu/eurostat/en/web/main/publications/manuals-and-guidelines
   type: text/html
 - title: Licence to use Eurostat products
