--- a/catalogue/eurostat/geoprocessed-eurostat-chdd/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-chdd/__item__.yaml
@@ -1,5 +1,5 @@
 links:
-- title: Original data source
+- title: Eurostat
   rel: derived_from
   href: https://ec.europa.eu/eurostat/cache/metadata/en/nrg_chdd_esms.htm
   type: text/html
