Update configs for new ingestion system

--- a/catalogue/era5/reanalysis-era5-land/era5-land-config.yaml
+++ b/catalogue/era5/reanalysis-era5-land/era5-land-config.yaml
@@ -1,32 +1,20 @@
-# request
-dataset: reanalysis-era5-land
-variables: [2m_temperature]
-start_date: "1950-01-01"
-stop_date: "2023-08-31"
-engine: cdsapi
-request_split: {day: 10}
-cache_kwargs: {keep_file: false}
-endpoint_url: https://s3.gra.perf.cloud.ovh.net/
-storage_options: {client_kwargs: {endpoint_url: "https://s3.gra.perf.cloud.ovh.net/"}, config_kwargs: {signature_version: s3v4}, default_block_size: 120000000}
+chunks: {latitude: 32, longitude: 32, time: 30}
+request_client_class_name: cads-api-client
+robust_to_zarr_kwargs: {restart_block: 1, restart_dim: "time"}
+to_zarr_kwargs:
+  store: s3://hedp/era5/reanalysis-era5-land-1950-2023.zarr
+  write_empty_chunks: false
+  consolidated: true
+xarray_open_kwargs:
+  cache_kwargs: {cache_file: true}
+  chunks: {}
+  engine: ecmwf
+  filename_or_obj:
+    collection_id: reanalysis-era5-land
+    area: ['73.99', '-27', '26', '44.99']
+    date: [1950-01-01/2023-08-31]
+    time: ['00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00']
+    variable: [total_precipitation, 2m_temperature]
+  request_chunker_kwargs: {merge_date_time: false}
+  request_chunks: {day: 10}
 
-request: {collection_id: "{dataset}", date: ["{start_date}/{stop_date}"], area: ["73.99", "-27", "26", "44.99"]} #Europe
-
-# storage & job management
-tmp_bucket: data-access-dev
-target_bucket: data-access-prod
-job_dir: era5/land
-job_name: era5-land-job.yaml
-intermediate_rechunk_log_dir: intermediate_rechunk_log
-final_rechunk_log_dir: final_rechunk_log
-target_store_path: s3://{target_bucket}/era5/reanalysis-era5-land-europe-1950-2023.zarr
-tmp_store_path: s3://{tmp_bucket}/{job_dir}/{dataset}-europe-{variable}-1950-2023-tmp.zarr
-
-# rechunk
-target_chunks:
-  lat: 32
-  lon: 32
-  time: 35064
-tmp_chunks:
-  lat: 256
-  lon: 32
-rechunk_batch_size: 36
