--- a/catalogue/ecmwf-forecasts/opendata-oper/opendata-oper-config.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-oper/opendata-oper-config.yaml
@@ -1,19 +1,21 @@
-# request
-variables: [t, 10u, 10v, 2t, ro, tp, sp, st, tcwv, d, gh, q, r, u, v, vo]
-request: {"source": "ecmwf", "stream": "{stream}", "type": "fc", "step": [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 66, 69, 72, 75, 78, 81, 84, 87, 90, 93, 96, 99, 102, 105, 108, 111, 114, 117, 120, 123, 126, 129, 132, 135, 138, 141, 144, 150, 156, 162, 168, 174, 180, 186, 192, 198, 204, 210, 216, 222, 228, 234]}
-levelist: [1000, 925, 850, 700, 500, 300, 250, 200, 50]
-
-#rechunk
-tmp_chunks:
-  latitude: 100
-  longitude: 100
-
-# storage & job management
-endpoint_url: https://s3.gra.perf.cloud.ovh.net
-tmp_bucket: data-access-dev
-final_bucket: data-access-prod
-stream: oper
-job_dir: ecmwf-forecasts
-job_name: opendata-oper-job.yaml
-cache_kwargs: {"keep_file": false}
-storage_options: {"client_kwargs": {"endpoint_url": "https://s3.gra.perf.cloud.ovh.net/"}, "config_kwargs": {"signature_version": "s3v4"}, "default_block_size": 120000000}
+chunks: {latitude: 32, longitude: 32, step: 65}
+robust_to_zarr_kwargs: {restart_block: 1, restart_dim : "step"}
+to_zarr_kwargs:
+  store: s3://data-access-dev/nm/ecmwf-forecasts/opendata-oper.zarr
+  write_empty_chunks: false
+  consolidated: true
+xarray_open_kwargs:
+  cache_kwargs: {cache_file: true}
+  chunks: {}
+  engine: ecmwf
+  client: ecmwf-opendata
+  filename_or_obj:
+    "source": ecmwf
+    "stream": oper
+    "date": -1
+    "type": fc
+    "step": [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 66, 69, 72, 75, 78, 81, 84, 87, 90, 93, 96, 99, 102, 105, 108, 111, 114, 117, 120, 123, 126, 129, 132, 135, 138, 141, 144, 150, 156, 162, 168, 174, 180, 186, 192, 198, 204, 210, 216, 222, 228, 234, 240]
+    "levelist": [1000, 925, 850, 700, 500, 300, 250, 200, 50]
+    "param":  [t, u]
+  request_chunker_kwargs: {merge_date_time: false}
+  request_chunks: {levelist: 1}
