--- a/catalogue/era5/reanalysis-era5-land/era5-land-config.yaml
+++ b/catalogue/era5/reanalysis-era5-land/era5-land-config.yaml
@@ -1,9 +1,7 @@
 chunks: {latitude: 256, longitude: 128}
 request_client_class_name: cads-api-client
-robust_to_zarr_kwargs: {restart_block: 73}
-to_zarr_kwargs:
-  store: s3://data-access-dev/era5/reanalysis-era5-land-no-antartica-1950-2023.zarr
-  write_empty_chunks: false
+robust_to_zarr_kwargs: {restart_block: 96}
+to_zarr_kwargs: {store: 's3://data-access-dev/era5/reanalysis-era5-land-no-antartica-1950-2023.zarr', write_empty_chunks: false}
 xarray_open_kwargs:
   cache_kwargs: {cache_file: false}
   chunks: {}
@@ -13,6 +11,6 @@ xarray_open_kwargs:
     area: ['90', '0', '-57.1', '360']
     date: [1950-01-01/2023-09-30]
     time: ['00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00']
-    variable: [total_precipitation]
+    variable: [2m_temperature, total_precipitation]
   request_chunker_kwargs: {merge_date_time: false}
   request_chunks: {day: 5}
