--- a/catalogue/era5/reanalysis-era5-land/ingestion/ingestion-steps.yaml
+++ b/catalogue/era5/reanalysis-era5-land/ingestion/ingestion-steps.yaml
@@ -1,7 +1,7 @@
 steps:
 - chunks: {latitude: 256, longitude: 256}
   request_client_class_name: cads-api-client
-  robust_to_zarr_kwargs: {restart_block: 96, restart_dim: valid_time}
+  robust_to_zarr_kwargs: {time_dim: valid_time, time_restart_block: 96}
   to_zarr_kwargs: {store: 's3://ecmwf-era5-land/intermediate/reanalysis-era5-land-no-antartica.zarr', write_empty_chunks: false}
   xarray_open_kwargs:
     cache_kwargs: {cache_file: false}
@@ -14,11 +14,11 @@ steps:
       collection_id: reanalysis-era5-land
       date: [1950-01-01/2023-10-31]
       time: ['00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00']
-      variable: [10m_u_component_of_wind, 10m_v_component_of_wind, surface_net_solar_radiation, 2m_temperature, total_precipitation]
+      variable: [2m_temperature, total_precipitation, 10m_u_component_of_wind, 10m_v_component_of_wind]
     request_chunker_kwargs: {time_dim: valid_time}
     request_chunks: {day: 5}
 - chunks: {latitude: 32, longitude: 64, valid_time: 2880}
-  robust_to_zarr_kwargs: {restart_block: 32, restart_dim: valid_time}
+  robust_to_zarr_kwargs: {time_dim: valid_time, time_restart_block: 8}
   to_zarr_kwargs: {store: 's3://ecmwf-era5-land/reanalysis-era5-land-no-antartica.zarr', write_empty_chunks: false}
   xarray_open_kwargs:
     chunks: {valid_time: 2880}
