--- a/catalogue/ecmwf-forecasts/opendata-oper/ingestion/ingestion-steps.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-oper/ingestion/ingestion-steps.yaml
@@ -4,7 +4,6 @@ steps:
   to_zarr_kwargs:
     store: s3://data-access-dev/nm/ecmwf-forecasts/opendata-oper.zarr
     write_empty_chunks: false
-    consolidated: true
   xarray_open_kwargs:
     cache_kwargs: {cache_file: true}
     chunks: {}
@@ -15,8 +14,9 @@ steps:
       "stream": oper
       "date": -1
       "type": fc
+      "time": ["0"]
       "step": [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 66, 69, 72, 75, 78, 81, 84, 87, 90, 93, 96, 99, 102, 105, 108, 111, 114, 117, 120, 123, 126, 129, 132, 135, 138, 141, 144, 150, 156, 162, 168, 174, 180, 186, 192, 198, 204, 210, 216, 222, 228, 234, 240]
       "levelist": [1000, 925, 850, 700, 500, 300, 250, 200, 50]
-      "param":  [t, u]
-    request_chunker_kwargs: {merge_date_time: false}
+      "param": [t, u]
+    request_chunker_kwargs: {time_dim: step}
     request_chunks: {levelist: 1}
