--- a/catalogue/ecmwf-forecasts/opendata-enfo/ingestion/ingestion-steps.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-enfo/ingestion/ingestion-steps.yaml
@@ -1,22 +1,23 @@
-chunks: {latitude: 32, longitude: 32, step: 65}
-robust_to_zarr_kwargs: {restart_block: 1, restart_dim : "step"}
-to_zarr_kwargs:
-  store: s3://data-access-dev/nm/ecmwf-forecasts/opendata-enfo.zarr
-  write_empty_chunks: false
-  consolidated: true
-xarray_open_kwargs:
-  cache_kwargs: {cache_file: true}
-  chunks: {}
-  engine: ecmwf
-  client: ecmwf-opendata
-  filename_or_obj:
-    "source": ecmwf
-    "stream": enfo
-    "date": -1
-    "type": pf
-    "number": [ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]
-    "step": [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 66, 69, 72, 75, 78, 81, 84, 87, 90, 93, 96, 99, 102, 105, 108, 111, 114, 117, 120, 123, 126, 129, 132, 135, 138, 141, 144, 150, 156, 162, 168, 174, 180, 186, 192, 198, 204, 210, 216, 222, 228, 234, 240]
-    "levelist": [1000, 925, 850, 700, 500, 300, 250, 200, 50]
-    "param":  [t, u]
-  request_chunker_kwargs: {merge_date_time: false}
-  request_chunks: {levelist: 1, step: 6}
+steps:
+- chunks: {latitude: 256, longitude: 256, step: 65}
+  robust_to_zarr_kwargs: {time_dim: step, time_restart_block: 65}
+  to_zarr_kwargs:
+    store: s3://data-access-dev/nm/ecmwf-forecasts/opendata-enfo.zarr
+    write_empty_chunks: false
+  xarray_open_kwargs:
+    cache_kwargs: {cache_file: true}
+    chunks: {}
+    engine: ecmwf
+    client: ecmwf-opendata
+    filename_or_obj:
+      "source": ecmwf
+      "stream": enfo
+      "date": -1
+      "type": pf
+      "time": ["0"]
+      "number": [ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50 ]
+      "step": [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 66, 69, 72, 75, 78, 81, 84, 87, 90, 93, 96, 99, 102, 105, 108, 111, 114, 117, 120, 123, 126, 129, 132, 135, 138, 141, 144, 150, 156, 162, 168, 174, 180, 186, 192, 198, 204, 210, 216, 222, 228, 234, 240]
+      "levelist": [1000, 925, 850, 700, 500, 300, 250, 200, 50]
+      "param": [t, u]
+    request_chunker_kwargs: {time_dim: step}
+    request_chunks: {levelist: 1}
