--- a/catalogue/era5/ecv-for-climate-change/__item__.yaml
+++ b/catalogue/era5/ecv-for-climate-change/__item__.yaml
@@ -8,17 +8,16 @@ links:
   href: https://destination-earth.eu/
   type: text/html
 bbox:
-- -180
-- -90
-- 180
-- 90
+- 0.0
+- -90.0
+- 359.8
+- 90.0
 properties:
-  start_datetime: 1979-01-01T00:00:00Z
-  end_datetime: 2023-09-30T00:00:00Z
-  dc:abstract:
-    The Essential Climate Variables from 1979 to present dataset contains 
-    a selection of climatologies, monthly anomalies and monthly mean fields 
-    for monitoring and assessment of climate variability and change
+  start_datetime: '1978-12-31T18:00:00Z'
+  end_datetime: '2023-08-31T18:00:00Z'
+  dc:abstract: The Essential Climate Variables from 1979 to present dataset contains
+    a selection of climatologies, monthly anomalies and monthly mean fields for monitoring
+    and assessment of climate variability and change
   dc:access_rights: free of charge
   dc:title: Essential climate variables from 1979 to present
   dc:subject:
@@ -27,7 +26,31 @@ properties:
   - ECMWF
   - reanalysis
   - climate
-
+  cube:variables:
+    swvl1:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Volumetric soil water layer 1
+      units: m**3 m**-3
+    t2m:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: 2 metre temperature
+      units: K
+    tp:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Total precipitation
+      units: m
 providers:
 - name: ECMWF
   roles:
