--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -8,15 +8,15 @@ links:
   href: https://destination-earth.eu/
   type: text/html
 bbox:
-- -180
-- -90
-- 180
-- 90
+- 0.0
+- -90.0
+- 359.8
+- 90.0
 properties:
-  start_datetime: 1940-01-01T00:00:00Z
-  end_datetime: 2023-08-31T00:00:00Z
-  dc:abstract:
-    Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric, ocean-wave and land surface quantities
+  start_datetime: '1940-01-01T00:00:00Z'
+  end_datetime: '2023-08-31T23:00:00Z'
+  dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric,
+    ocean-wave and land surface quantities
   dc:access_rights: charges apply
   dc:title: ERA5 hourly data on the surface
   dc:subject:
@@ -26,7 +26,15 @@ properties:
   - surface
   - reanalysis
   - weather
-
+  cube:variables:
+    2m_temperature:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+      description: 2 metre temperature
+      units: K
 providers:
 - name: ECMWF
   roles:
