--- a/catalogue/eurostat/geoprocessed-eurostat-chdd/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-chdd/__item__.yaml
@@ -8,15 +8,14 @@ links:
   href: https://destination-earth.eu/
   type: text/html
 bbox:
-- 6
-- 35
-- 19
-- 55
+- 6.0
+- 35.0
+- 19.0
+- 55.0
 properties:
-  start_datetime: 2000-01-01T00:00:00Z
-  end_datetime: 2021-01-01T00:00:00Z
-  dc:abstract:
-    Europe Eurostat CDD & HDD data from 1979 to 2021
+  start_datetime: '1979-01-01T00:00:00Z'
+  end_datetime: '2022-01-01T00:00:00Z'
+  dc:abstract: Europe Eurostat CDD & HDD data from 1979 to 2021
   dc:access_rights: charges apply
   dc:title: Eurostat CDD & HDD data over Europe
   dc:subject:
@@ -28,7 +27,22 @@ properties:
   - geospatial
   - heating
   - cooling
-
+  cube:variables:
+    cdd:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    hdd:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    spatial_ref:
+      dimensions: []
+      type: data
 providers:
 - name: EUROSTAT
   roles:
