--- a/catalogue/eurostat/geoprocessed-eurostat-population/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-population/__item__.yaml
@@ -8,15 +8,14 @@ links:
   href: https://destination-earth.eu/
   type: text/html
 bbox:
-- -27
-- 26
-- 45
-- 74
+- -27.0
+- 26.0
+- 44.9
+- 73.9
 properties:
-  start_datetime: 1990-01-01T00:00:00Z
-  end_datetime: 2022-01-01T00:00:00Z
-  dc:abstract:
-    Europe Eurostat population data from 1990 to 2022
+  start_datetime: '1990-01-01T00:00:00Z'
+  end_datetime: '2022-01-01T00:00:00Z'
+  dc:abstract: Europe Eurostat population data from 1990 to 2022
   dc:access_rights: charges apply
   dc:title: Eurostat population data over Europe
   dc:subject:
@@ -26,7 +25,100 @@ properties:
   - unidemo
   - geoprocessed
   - geospatial
-
+  cube:variables:
+    population_F_TOTAL:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_F_UNK:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_F_Y15_64:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_F_Y_GE65:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_F_Y_LT15:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_M_TOTAL:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_M_UNK:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_M_Y15_64:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_M_Y_GE65:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_M_Y_LT15:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_T_TOTAL:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_T_UNK:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_T_Y15_64:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_T_Y_GE65:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    population_T_Y_LT15:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    spatial_ref:
+      dimensions: []
+      type: data
 providers:
 - name: EUROSTAT
   roles:
