--- a/catalogue/eurostat/geoprocessed-eurostat-sdg07/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-sdg07/__item__.yaml
@@ -1,22 +1,21 @@
 links:
 - title: Eurostat
   rel: derived_from
-  href:  https://ec.europa.eu/eurostat/cache/metadata/en/sdg_07_11_esmsip2.htm
+  href: https://ec.europa.eu/eurostat/cache/metadata/en/sdg_07_11_esmsip2.htm
   type: text/html
 - title: Destination Earth
   rel: funded_by
   href: https://destination-earth.eu/
   type: text/html
 bbox:
-- 6
-- 35
-- 19
-- 55
+- 6.0
+- 35.0
+- 19.0
+- 55.0
 properties:
-  start_datetime: 1990-01-01T00:00:00Z
-  end_datetime: 2022-01-01T00:00:00Z
-  dc:abstract:
-    Europe EUROSTAT Final Consumption of Energy data from 1990 to 2022
+  start_datetime: '2000-01-01T00:00:00Z'
+  end_datetime: '2021-01-01T00:00:00Z'
+  dc:abstract: Europe EUROSTAT Final Consumption of Energy data from 1990 to 2022
   dc:access_rights: charges apply
   dc:title: EUROSTAT Final Consumption of Energy data over Europe
   dc:subject:
@@ -26,7 +25,16 @@ properties:
   - europe
   - geoprocessed
   - geospatial
-
+  cube:variables:
+    final_energy_consumption:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    spatial_ref:
+      dimensions: []
+      type: data
 providers:
 - name: EUROSTAT
   roles:
