--- a/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
+++ b/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
@@ -45,9 +45,7 @@ properties:
       - longitude
       type: data
       unit: m
-      description: 'Density ocean mixed layer thickness
-
-        '
+      description: Density ocean mixed layer thickness
       units: m
     bottomT:
       dimensions:
