--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -46,11 +46,11 @@ properties:
       - latitude
       - longitude
       type: data
-      description: '*2m temperature*. Temperature of air at 2m above the surface of
-          land, sea or in-land waters. 2m temperature is calculated by interpolating
-          between the lowest model level and the Earth's surface, taking account of
-          the atmospheric conditions. Temperature measured in kelvin can be converted
-          to degrees Celsius (\xB0C) by subtracting 273.15.'
+      description: "*2m temperature*. Temperature of air at 2m above the surface of\
+        \ land, sea or in-land waters. 2m temperature is calculated by interpolating\
+        \ between the lowest model level and the Earth's surface, taking account of\
+        \ the atmospheric conditions. Temperature measured in kelvin can be converted\
+        \ to degrees Celsius (\xB0C) by subtracting 273.15."
       units: K
     tp:
       dimensions:
