--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -35,6 +35,7 @@ properties:
       type: data
       description: 2 metre temperature
       units: K
+      unit: K
     tp:
       dimensions:
       - valid_time
@@ -43,6 +44,7 @@ properties:
       type: data
       description: Total precipitation
       units: m
+      unit: m
     u10:
       dimensions:
       - valid_time
@@ -51,6 +53,7 @@ properties:
       type: data
       description: 10 metre U wind component
       units: m s**-1
+      unit: m s**-1
     v10:
       dimensions:
       - valid_time
@@ -59,6 +62,7 @@ properties:
       type: data
       description: 10 metre V wind component
       units: m s**-1
+      unit: m s**-1
 providers:
 - name: ECMWF
   roles:
