--- a/catalogue/eurostat/geoprocessed-eurostat-sdg07/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-sdg07/__item__.yaml
@@ -8,14 +8,14 @@ links:
   href: https://destination-earth.eu/
   type: text/html
 bbox:
-- 6.0
-- 35.0
-- 19.0
-- 55.0
+- -27.0
+- 26.0
+- 44.9
+- 73.9
 properties:
   start_datetime: '2000-01-01T00:00:00Z'
   end_datetime: '2021-01-01T00:00:00Z'
-  dc:abstract: Europe EUROSTAT Final Consumption of Energy data from 1990 to 2022
+  dc:abstract: Europe EUROSTAT Final Consumption of Energy data from 2000 to 2022
   dc:access_rights: charges apply
   dc:title: EUROSTAT Final Consumption of Energy data over Europe
   dc:subject:
@@ -26,7 +26,19 @@ properties:
   - geoprocessed
   - geospatial
   cube:variables:
-    final_energy_consumption:
+    L0_I05:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    L0_MTOE:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    L0_TOE_HAB:
       dimensions:
       - time
       - lat
@@ -55,6 +67,6 @@ assets:
     roles:
     - thumbnail
   data:
-    href: s3://eurostat/eurostat-final-energy-consumption-2000-2021.zarr
+    href: s3://eurostat/sdg_07_11-20000101-20210101.zarr
     roles:
     - data
